<resources>
    <string name="app_name">QuizApp</string>
    <string name="intro">Test your knowledge in geography! How many questions can you answer?</string>
    <string name="start">Start Quiz</string>
    <string name="try_again">Try again</string>
    <string name="next">Next</string>
    <string name="website">go to Triviaplaza.com</string>
    <string name="score">Score</string>
    <string name="imgDesc">background image</string>
    <string name="continueQuiz">Continue Quiz</string>
    <string name="endScreen1">Final Score: </string>
    <string name="endScreen2">Questions provided by Triviaplaza.com</string>
    <string name="endScreen3">Visit their website for more quizzes in more topics!</string>
    <string name="toastMessage">Pick an answer first!</string>
</resources>
