<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/appBackground"
        android:contentDescription="@string/imgDesc"/>

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="4"
            android:background="@color/transparent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/quizIntro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/intro"
                android:textColor="@android:color/white"
                style="@style/startButton"/>

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:onClick="setQuestion"
                android:text="@string/start"
                android:visibility="visible"
                style="@style/startButton"                />

        </LinearLayout>

        <View
            android:id="@+id/black_line_view1"
            style="@style/separatorView" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/answer1"
                    style="@style/buttonStyle"
                    android:layout_weight="1"
                    android:onClick="button1"
                    android:text="A"/>

                <Button
                    android:id="@+id/answer3"
                    style="@style/buttonStyle"
                    android:layout_weight="1"
                    android:onClick="button3"
                    android:text="C"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/answer2"
                    style="@style/buttonStyle"
                    android:layout_weight="1"
                    android:onClick="button2"
                    android:text="B"/>

                <Button
                    android:id="@+id/answer4"
                    style="@style/buttonStyle"
                    android:layout_weight="1"
                    android:onClick="button4"
                    android:text="D"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/black_line_view2"
            style="@style/separatorView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/transparent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/score"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="tryAgain"
                android:text="@string/try_again"
                android:visibility="gone" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setQuestion"
                android:text="@string/next"
                android:visibility="gone" />

            <Button
                android:id="@+id/link_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="openLink"
                android:text="@string/website"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
